--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- CSS libraries -->
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="node_modules/build/nv.d3.min.css" rel="stylesheet" type="text/css">
+    <link href="node_modules/nvd3/build/nv.d3.min.css" rel="stylesheet" type="text/css">
 
     <!-- Custom CSS libraries -->
     <link rel="stylesheet" href="assets/css/main.css" type="text/css" media="screen">
@@ -21,7 +21,7 @@
     <script src="node_modules/popper.js/dist/umd/popper.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="node_modules/d3/d3.min.js" type="text/javascript" type="text/javascript" charset="utf-8"></script>
-	<script src="node_modules/build/nv.d3.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="node_modules/nvd3/build/nv.d3.min.js" type="text/javascript" charset="utf-8"></script>
 	<!-- Custom Javascript libraries -->
 	<script src="assets/js/main.js" type="text/javascript" charset="utf-8"></script>
   </head>
@@ -55,25 +55,26 @@
 			<li class="breadcrumb-item active">Home</li>
 		</ol>	
 		<div class="container">
-			<h2>Group locations</h2>
+			<h2>Location and size of user groups</h2>
 			<div id="viz"></div>			
 		</div>			
 	</div>
+	<div class="container whitebox">
+		<h2>Users per area</h2>
+		<div id="multibar"></div>
+		<a href="http://localhost/va_project/behavior"><button type="button" class="btn btn-info">Overview of user flow ></button></a>
+		
+	</div>
 	<div class="container">
 		<div class="row">
-			<div class="col-md-4">
-				<h2>Members per hours of the day</h2>
+			<div class="col-md-5 whitebox">
+				<h2>Users per hours of the day</h2>
 				<div id="heatmap"></div>
-			</div>
-			<div class="col-md-4">
-				<h2>Members per area</h2>
-				<div id="multibar"></div>
-				<a href="http://localhost/va_project/behavior"><button type="button" class="btn btn-dark">Flow</button></a>
-			</div>
-			<div class="col-md-4">
+			</div>			
+			<div class="col-md-5 whitebox">
 				<h2>Checkin per day</h2>
-				<div id="piechart"></div>
-				<a href="http://localhost/va_project/anomalies"><button type="button" class="btn btn-dark">Gaps</button></a>
+				<div id="donutchart"></div>
+				<a href="http://localhost/va_project/anomalies"><button type="button" class="btn btn-info">Overview of check-in gaps ></button></a>
 			</div>
 		</div>
 	</div>
