Loading data of donut charts and improving all donut charts components

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	<hr>
 
 	<footer>
-		<p> Visual Analytics - 2016-2017</p>
+		<p> Project by <a href="mailto:ilaria.tiezzi@gmail.com">Ilaria Tiezzi</a> for the Course of Visual Analytics (Course Semester 2017), University of Pisa</p>
 	</footer>
 	</div>
 
