Refine the page display

--- a/anomalies.html
+++ b/anomalies.html
@@ -21,7 +21,7 @@
     <script src="node_modules/d3/d3.min.js" type="text/javascript" charset="utf-8"></script>
 	
 	<!-- Custom Javascript libraries -->
-	<script src="assets/js/main.js" type="text/javascript" charset="utf-8"></script>
+	<script src="assets/js/anomalies.js" type="text/javascript" charset="utf-8"></script>
   </head>
   <body>
 			
@@ -63,10 +63,8 @@
 		<p>flow</p>		
 	</div>
 
-	<hr>
-
 	<footer>
-		<p>Visual Analytics - 2016-2017</p>
+		<p> Project by <a href="mailto:ilaria.tiezzi@gmail.com">Ilaria Tiezzi</a> for the Course Semester 2017 of Visual Analytics, University of Pisa</p>
 	</footer>
 	</div>
 
