--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 		<div class="row">
 			<div class="col-md-5 whitebox">
 				<h2>Users per hours of the day</h2>
-				<div id="heatmap"></div>
-				<div id="heatmap-tooltip" class="hidden">
+				<div id="heatmap" class="heatmap"></div>
+				<div id="heatmap-tooltip" class="hidden h-tooltip">
 					<p id="heatmap-time"></p>	
 					<p id="heatmap-value"></p>
 					<p>users</p>					
@@ -89,10 +89,8 @@
 		</div>
 	</div>
 
-	<hr>
-
 	<footer>
-		<p> Project by <a href="mailto:ilaria.tiezzi@gmail.com">Ilaria Tiezzi</a> for the Course of Visual Analytics (Course Semester 2017), University of Pisa</p>
+		<p> Project by <a href="mailto:ilaria.tiezzi@gmail.com">Ilaria Tiezzi</a> for the Course Semester 2017 of Visual Analytics, University of Pisa</p>
 	</footer>
 	</div>
 
