--- a/behavior.html
+++ b/behavior.html
@@ -21,7 +21,7 @@
     <script src="node_modules/d3/d3.min.js" type="text/javascript" charset="utf-8"></script>
 	
 	<!-- Custom Javascript libraries -->
-	<script src="assets/js/main.js" type="text/javascript" charset="utf-8"></script>
+	<script src="assets/js/behavior.js" type="text/javascript" charset="utf-8"></script>
   </head>
   <body>			
 	<nav class="navbar navbar-expand-md navbar-dark bg-dark">
@@ -54,18 +54,44 @@
 	
 	<div class="container">
 		<h2>Members per locations and hours of the day</h2>
-			<p>heat map</p>					
+		<div class="row">
+			<div class="col-md-4 whitebox">
+				<h3>Friday</h3>
+				<div id="heatmap-fri" class="heatmap"></div>
+				<div id="heatmap-tooltip-fri" class="hidden h-tooltip">
+					<p id="heatmap-time-fri"></p>	
+					<p id="heatmap-value-fri"></p>
+					<p>users</p>					
+				</div>
+			</div>
+			<div class="col-md-4 whitebox">
+				<h3>Saturday</h3>
+				<div id="heatmap-sat" class="heatmap"></div>
+				<div id="heatmap-tooltip-sat" class="hidden h-tooltip">
+					<p id="heatmap-time-sat"></p>	
+					<p id="heatmap-value-sat"></p>
+					<p>users</p>					
+				</div>
+			</div>
+			<div class="col-md-4 whitebox">
+				<h3>Sunday</h3>
+				<div id="heatmap-sun" class="heatmap"></div>
+				<div id="heatmap-tooltip-sun" class="hidden h-tooltip">
+					<p id="heatmap-time-sun"></p>	
+					<p id="heatmap-value-sun"></p>
+					<p>users</p>					
+				</div>
+			</div>
+		</div>				
 	</div>			
 	
 	<div class="container">
-		<h2>times od visit?</h2>
+		<h2>times od visit per area</h2>
 		<p>bar</p>		
 	</div>
 
-	<hr>
-
 	<footer>
-		<p> Visual Analytics - 2016-2017</p>
+		<p> Project by <a href="mailto:ilaria.tiezzi@gmail.com">Ilaria Tiezzi</a> for the Course Semester 2017 of Visual Analytics, University of Pisa</p>
 	</footer>
 	</div>
 
