Update links and the position of tooltips in the park map

--- a/anomalies.html
+++ b/anomalies.html
@@ -33,13 +33,13 @@
       	<div class="collapse navbar-collapse" id="navbarCollapse">	        
         	<ul class="navbar-nav mr-auto">
 				<li class="nav-item">
-					<a class="nav-link" href="http://localhost/va_project/">Home <span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="http://localhost/va_project/behavior.html">Behavior</a>
+					<a class="nav-link" href="behavior.html">Behavior</a>
 				</li>
 				<li class="nav-item active">
-					<a class="nav-link" href="http://localhost/va_project/anomalies.html">Anomalies</a>
+					<a class="nav-link" href="anomalies.html">Anomalies</a>
 				</li>
 	        </ul>	         
 	        <div class="mt-2 mt-md-0">	         
@@ -49,18 +49,17 @@
 	</nav>
 	
 	<ol class="breadcrumb">
-		<li class="breadcrumb-item"><a href="http://localhost/va_project/index.html">Home</a></li>
+		<li class="breadcrumb-item"><a href="index.html">Home</a></li>
 		<li class="breadcrumb-item active">Anomalies</li>
 	</ol>
 		
 	<div class="container">
-		<h2>Checkin per number of movements</h2>
-		<p>bubble chart</p>					
-	</div>			
-	
+		<h2>Check-in per number of movement</h2>
+			
+	</div>	
 	<div class="container">
 		<h2>Checkin and movements of id</h2>
-		<p>flow</p>		
+			
 	</div>
 
 	<footer>
