--- a/behavior.html
+++ b/behavior.html
@@ -32,13 +32,13 @@
       	<div class="collapse navbar-collapse" id="navbarCollapse">	        
         	<ul class="navbar-nav mr-auto">
 				<li class="nav-item">
-					<a class="nav-link" href="http://localhost/va_project/">Home <span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item active">
-					<a class="nav-link" href="http://localhost/va_project/behavior.html">Behavior</a>
+					<a class="nav-link" href="behavior.html">Behavior</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="http://localhost/va_project/anomalies.html">Anomalies</a>
+					<a class="nav-link" href="anomalies.html">Anomalies</a>
 				</li>
 	        </ul>	         
 	        <div class="mt-2 mt-md-0">	         
@@ -52,7 +52,7 @@
 		<li class="breadcrumb-item active">Behavior</li>
 	</ol>
 	
-	<div class="container">
+	<div id="heatmaps" class="container">		
 		<h2>Members per locations and hours of the day</h2>
 		<div class="row">
 			<div class="col-md-4 whitebox">
@@ -82,12 +82,10 @@
 					<p>users</p>					
 				</div>
 			</div>
-		</div>				
+		</div>						
 	</div>			
-	
-	<div class="container">
-		<h2>times od visit per area</h2>
-		<p>bar</p>		
+	<div id="linechart" class="container" >		
+		<h2>Comparison of movements per day</h2>		
 	</div>
 
 	<footer>
