Update the data by filtering only check-ins

--- a/behavior.html
+++ b/behavior.html
@@ -54,7 +54,7 @@
 	</ol>
 	
 	<div id="heatmaps" class="container whitebox">		
-		<h2>Members per locations and hours of the day</h2>
+		<h2>Check-ins per area and hours of the day</h2>
 		<div class="row">
 			<div class="col-md-4">
 				<h3>Friday</h3>
@@ -86,7 +86,7 @@
 		</div>						
 	</div>			
 	<div class="container whitebox" >		
-		<h2>Comparison of user movements per day</h2>
+		<h2>Comparison of movements per day</h2>
 		<div class="row"> 
 			<div id="linechart"></div>	
 		</div>	
