Add global variables and update layout

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<li class="breadcrumb-item active">Home</li>
 		</ol>	
 		<div class="container">
-			<h2>Location and size of user groups</h2>
+			<h2>Location and size of groups of moving users</h2>
 			<div id="viz"></div>
 			<div id="viz-tooltip" class="hidden h-tooltip">
 				<p id="viz-group"></p>	
@@ -65,26 +65,26 @@
 		</div>			
 	</div>
 	<div class="container whitebox">
-		<h2>Users per area</h2>
+		<h2>Check-ins per area and day</h2>
 		<div id="multibar"></div>
-		<a href="behavior.html#linechart"><button type="button" class="btn btn-info">Comparison of movements per day ></button></a>
+		<a href="behavior.html#linechart"><button type="button" class="btn btn-info">Overview of movements per area and day ></button></a>
 	</div>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-5 whitebox">
-				<h2>Users per hours of the day</h2>
+				<h2>Check-ins per hours of the day</h2>
 				<div id="heatmap" class="heatmap"></div>
 				<div id="heatmap-tooltip" class="hidden h-tooltip">
 					<p id="heatmap-time"></p>	
 					<p id="heatmap-value"></p>
 					<p>users</p>					
 				</div>
-				<a href="behavior.html#heatmaps"><button type="button" class="btn btn-info">Comparison of users per day, area and hour ></button></a>
+				<a href="behavior.html#heatmaps"><button type="button" class="btn btn-info">Comparison of check-ins per day, area and hour ></button></a>
 			</div>			
 			<div class="col-md-5 whitebox">
-				<h2>Checkin per day</h2>
+				<h2>Checkins per day</h2>
 				<div id="donutchart"></div>
-				<a href="anomalies.html"><button type="button" class="btn btn-info">Overview of check-in per number of movement ></button></a>
+				<a href="anomalies.html"><button type="button" class="btn btn-info">Comparison of check-ins per day during the event ></button></a>
 			</div>
 		</div>
 	</div>
