--- a/anomalies.html
+++ b/anomalies.html
@@ -19,6 +19,7 @@
     <script src="node_modules/popper.js/dist/umd/popper.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="node_modules/d3/d3.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="node_modules/nvd3/build/nv.d3.min.js" type="text/javascript" charset="utf-8"></script>
 	
 	<!-- Custom Javascript libraries -->
 	<script src="assets/js/anomalies.js" type="text/javascript" charset="utf-8"></script>
@@ -51,12 +52,20 @@
 	<ol class="breadcrumb">
 		<li class="breadcrumb-item"><a href="index.html">Home</a></li>
 		<li class="breadcrumb-item active">Anomalies</li>
-	</ol>
-		
-	<div class="container">
-		<h2>Check-in per number of movement</h2>
-			
+	</ol>	
+	<div class="container whitebox" >		
+		<h2>Comparison of check-ins per day in Creighton Pavilion</h2>
+		<div class="row"> 
+			<div id="cf-linechart" class="cumLineChart"></div>	
+		</div>	
+	</div>
+	<div class="container whitebox">
+		<h2>Check-ins and movements per id</h2>
+		<div class="row"> 
+			<div id="cf-linechart" class="cumLineChart"></div>	
+		</div>
 	</div>	
+	
 	<div class="container">
 		<h2>Checkin and movements of id</h2>
 			
