Define style for the all cumulative line chart class

--- a/behavior.html
+++ b/behavior.html
@@ -88,7 +88,7 @@
 	<div class="container whitebox" >		
 		<h2>Comparison of movements per day</h2>
 		<div class="row"> 
-			<div id="linechart"></div>	
+			<div id="linechart" class="cumLineChart"></div>	
 		</div>	
 	</div>
 
