--- a/anomalies.html
+++ b/anomalies.html
@@ -54,20 +54,20 @@
 		<li class="breadcrumb-item active">Anomalies</li>
 	</ol>	
 	<div class="container whitebox" >		
-		<h2>Comparison of check-ins per day in Creighton Pavilion</h2>
+		<h2>Comparison of check-ins per day and hour in Creighton Pavilion</h2>
 		<div class="row"> 
 			<div id="cf-linechart" class="cumLineChart"></div>	
 		</div>	
 	</div>
 	<div class="container whitebox">
-		<h2>Check-ins and movements per id</h2>
+		<h2>Users with a lower avarage of check-ins and movements</h2>
 		<div class="row"> 
-			<div id="cf-linechart" class="cumLineChart"></div>	
+			<div id="bubblechart"></div>	
 		</div>
 	</div>	
 	
 	<div class="container">
-		<h2>Checkin and movements of id</h2>
+		<h2>Check-ins and movements of id</h2>
 			
 	</div>
 
