--- a/anomalies.html
+++ b/anomalies.html
@@ -59,16 +59,18 @@
 			<div id="cf-linechart" class="cumLineChart"></div>	
 		</div>	
 	</div>
-	<div class="container whitebox">
-		<h2>Users with a lower avarage of check-ins and movements</h2>
-		<div class="row"> 
-			<div id="bubblechart"></div>	
-		</div>
-	</div>	
 	
-	<div class="container">
-		<h2>Check-ins and movements of id</h2>
-			
+	<div class="container whitebox">
+		<h2>Total check-ins and movements per id with at least a check-in in Creighton Pavilion</h2>
+		<div class="row"> 
+			<div id="cf-bubblechart" class="bubbleChart"></div>	
+		</div>			
+	</div>
+	<div class="jumbotron">		
+		<div class="container">
+			<h2>Check-ins and movements of the ID 1906453 on Friday</h2>				
+			<div id="mov-id"></div>						
+		</div>				
 	</div>
 
 	<footer>
