Add the legend to heatmaps in beahavior page and minor changes

--- a/behavior.html
+++ b/behavior.html
@@ -83,6 +83,9 @@
 					<p>users</p>					
 				</div>
 			</div>
+		</div>
+		<div id="legend-heatmaps">
+			<p>*CA: Coaster Alley, EC: Entry Corridor, KL: Kiddie Land, TL: Tundra Land, WL: Wet Land</p>
 		</div>						
 	</div>			
 	<div class="container whitebox" >		
